feat: added `tailwindInit` task. fix: downgrade to Java 11 for testing