@@ -15,6 +15,7 @@
  */
 
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     kotlin("jvm") version "1.8.21"
     id("java-gradle-plugin")
@@ -30,10 +31,16 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    this.jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
 
 tasks.withType<KotlinCompile> {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 gradlePlugin {
